--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
+    "debug": "^3.1.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "mongojs": "^2.6.0"
+    "mongojs": "^2.6.0",
+    "mysql": "^2.16.0"
   },
   "devDependencies": {
     "istanbul": "^0.4.5",
